@@ -27,8 +27,8 @@ import net.minecraft.network.chat.Component;
 import net.minecraft.world.inventory.AbstractContainerMenu;
 import net.minecraft.world.inventory.ClickType;
 import net.minecraft.world.item.ItemStack;
-import net.minecraftforge.eventbus.api.EventPriority;
-import net.minecraftforge.eventbus.api.SubscribeEvent;
+import net.neoforged.bus.api.EventPriority;
+import net.neoforged.bus.api.SubscribeEvent;
 
 @ConfigCategory(Category.UI)
 public class BulkBuyFeature extends Feature {
@@ -101,7 +101,7 @@ public class BulkBuyFeature extends Feature {
             break;
         }
         if (returnable == oldLore) {
-            WynntilsMod.warn("Could not find price for " + oldLore.get(0).getString());
+            WynntilsMod.warn("Could not find price for " + oldLore.getFirst().getString());
         }
         return returnable;
     }
